updated css / html, some fixes

--- a/html-class-site/index.html
+++ b/html-class-site/index.html
@@ -27,11 +27,13 @@
             <img src="images/htmlcss.png" alt="Our logo" width="150">
             <h1>HTML Class Website</h1>
         </header>
-        <nav>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="pages/about.html">ABOUT</a></li>
-            <li><a href="pages/gallery.html">GALLERY</a></li>
-            <li><a href="pages/contact.html">CONTACT</a></li>
+        <nav class="mainNav">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="pages/about.html">ABOUT</a></li>
+                <li><a href="pages/gallery.html">GALLERY</a></li>
+                <li><a href="pages/contact.html">CONTACT</a></li>
+            </ul>
         </nav>
         <div id="hero">
             <blockquote>Tagline goes here</blockquote>
