--- a/htmlMidterm/midTerm.html
+++ b/htmlMidterm/midTerm.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 /* ---- container should be fixed width 960px and centered ---*/
 </style>
-<link href="firstNameLastInitial.css" rel="stylesheet" type="text/css">
+<link href="ZhongliL.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
