--- a/html-class-site/pages/contact.html
+++ b/html-class-site/pages/contact.html
@@ -35,25 +35,16 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        <div id="hero">
-            <blockquote>Tagline goes here</blockquote>
-        </div>
         <main>
-            <article>
-                <img src="images/info.png" alt="info" width="200">
-                <h1>About US</h1>
-                <p>233</p>
-            </article>
-            <article>
-                <img src="images/gallery.png" alt="gallery" width="200">
-                <h1>Gallery</h1>
-                <p>233</p>
-            </article>
-            <article>
-                <img src="images/contact.png" alt="Contact" width="200">
-                <h1>Contact</h1>
-                <p>233</p>
-            </article>
+            <section>
+                <h1>Contact US</h1>
+            </section>
+            <section>
+                <h1>Find US</h1>
+                <div>
+                    <h2>Call US</h2>
+                </div>
+            </section>
         </main>
         <footer>
             <section>
