--- a/html-class-site/pages/contact.html
+++ b/html-class-site/pages/contact.html
@@ -38,6 +38,15 @@
         <main>
             <section>
                 <h1>Contact US</h1>
+                <form action="../scripts/contact.php" method="POST">
+                    <fieldset>
+                        <legend>Personal info</legend>
+                            <label>
+                                First name:
+                                <input type="text" autofocus required id="firstName" name="firstName" placeholder="Required" size="25" maxlength="50">
+                            </label>
+                    </fieldset>
+                </form>
             </section>
             <section>
                 <h1>Find US</h1>
