--- a/Final-Project-site/index.html
+++ b/Final-Project-site/index.html
@@ -3,9 +3,41 @@
     <head>
         <meta charset="utf-8">
         <title>Welcome To Yuri's Homepage</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://github.com/yurishouse" target="_blank"><img src="images/github.png" alt="github" width="50"></a>    
+                    </li>
+                    <li>
+                        <a href="https://t.me/yurishouse" target="_blank"><img src="images/telegram.png" alt="telegram" width="50"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/ShiinaYuriChan" target="_blank"><img src="images/twitter.png" alt="twitter logo" width="50"></a>
+                    </li>
+                </ul>
+            </nav>
+        <div id="Leftimage">
 
+        </div>
+        <div id="Right image">
+
+        </div>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
     </body>
     <footer>
 
