--- a/Final-project-with-cheats/index.html
+++ b/Final-project-with-cheats/index.html
@@ -16,12 +16,12 @@
         <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
             <div class="site-logo"></div><span class="site-description">Home page for Zhongli Liang (Yuri)</span></span></div>
         <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Home</a><a class="mdl-navigation__link" href="pages/portfolio.html">Portfolio</a><a class="mdl-navigation__link" href="pages/about.html">About</a><a class="mdl-navigation__link" href="pages/contact.html">Contact</a>
+          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Home</a><a class="mdl-navigation__link" href="pages/articles.html">Articles</a><a class="mdl-navigation__link" href="pages/about.html">About</a><a class="mdl-navigation__link" href="pages/contact.html">Contact</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Home</a><a class="mdl-navigation__link" href="pages/portfolio.html">Portfolio</a><a class="mdl-navigation__link" href="pages/about.html">About</a><a class="mdl-navigation__link" href="pages/contact.html">Contact</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Home</a><a class="mdl-navigation__link" href="pages/articles.html">Articles</a><a class="mdl-navigation__link" href="pages/about.html">About</a><a class="mdl-navigation__link" href="pages/contact.html">Contact</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
@@ -32,122 +32,78 @@
           <h2 class="mdl-card__title-text">Welcome</h2>
         </div>
         <div class="mdl-card__supporting-text">
-          Demo of Material Design Portfolio Template by TemplateFlip. Click on &quot;Download&quot; button below to download the template.
+         Welcome to my homepage! Feel free to take a look around, if you have any question about me, use the button below.
         </div>
         <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href=" https://templateflip.com/templates/material-portfolio/" target="_blank">
-            Download
+          <a class="mdl-button mdl-button--colored mdl-button--accent" href="pages/contact.html">
+            Contact
           </a>
         </div>
     </div>
 </div>
 
 <section class="section--center mdl-grid site-max-width">
-  <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white  mdl-shadow--4dp">
-    <i class="material-icons">play_circle_filled</i>
+  <header class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white  mdl-shadow--4dp">
+    <img src="img/avatar2.jpg" alt="Avatar">
   </header>
   <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp">
     <div class="mdl-card__title">
-        <h2 class="mdl-card__title-text">Introduction</h2>
+        <h2 class="mdl-card__title-text">Personal Bio</h2>
     </div>
     <div class="mdl-card__supporting-text">
-      Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
+      I'm currently a CSD Student at <a href="https://www.lwtech.edu/">@LWTECH</a>. I like programming, psychology, photography and cooking. 
     </div>
-    <div class="mdl-card__actions  mdl-card--border">
-      <a href="#" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">Watch Intro</a>
+    <div class="mdl-card__actions  mdl-card--border mdl-card__supporting-text">
+      <a href="pages/articles.html" class="mdl-button mdl-button--colored mdl-button--accent">Click here</a> if you want to look at some of my articles/projects.
     </div>
   </div>
 </section>
 <section class="section--center mdl-grid site-max-width">
     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio1.jpg" border="0" alt="">
+            <a href="https://github.com/yurishouse" target="_blank"><img class="article-image" src="img/github.png" border="0" alt="github"></a>
         </div>
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Rocky Peak</h2>
+            <h2 class="mdl-card__title-text">My github</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+            The place where I share all of my projects, codes, and mystery photos with everyone. Basically everything is under a<a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU GPL v3.0</a> license. so feel free to grub what you need.
         </div>
     </div>
     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio2.jpg" border="0" alt="">
+            <a href="https://twitter.com/ShiinaYuriChan"><img class="article-image" src="img/twitter.png" border="0" alt="twitter"></a>
         </div>
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Night Shadow</h2>
+            <h2 class="mdl-card__title-text">Twitter</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+            I mainly use Twitter as my social media platform, come hangout with me! I will be very happy to see you.
         </div>
     </div>
     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio3.jpg" border="0" alt="">
+            <a href="https://t.me/yurishouse"><img class="article-image" src="img/telegram.png" border="0" alt="telegram"></a>
         </div>
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Sky Reach</h2>
+            <h2 class="mdl-card__title-text">Telegram</h2>
         </div>
         <div class="mdl-card__supporting-text">
-            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+            I use Telegram as my choice of IMS (instant message) app, It's more secure than most of the ims apps out there with a better crypto and useful features that other apps usually charges you money to use. 
         </div>
     </div>
 </section>
 
-<section class="section--center mdl-grid site-max-width homepage-portfolio">
-    <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio.html">View Portfolio</a>
+<section class="section--center mdl-grid site-max-width homepage-article">
+    <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="pages/articles.html">View Articles</a>
 </section>
 
-<div class="homepage-footer">
-  <section class="mdl-grid site-max-width">
-      <div class="mdl-cell mdl-card mdl-cell--8-col mdl-cell--4-col-tablet  mdl-shadow--4dp portfolio-card">
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Testimonials</h2>
-        </div>
-        <ul class="demo-list-three mdl-list">
-            <li class="mdl-list__item mdl-list__item--three-line">
-              <span class="mdl-list__item-primary-content">
-                <i class="material-icons mdl-list__item-avatar">person</i>
-                <span>Amazing people, always ready to help!</span>
-                <span class="mdl-list__item-text-body">
-                  Bryan Cranston, CEO, Amazing.com
-                </span>
-              </span>
-            </li>
-            <li class="mdl-list__item mdl-list__item--three-line">
-              <span class="mdl-list__item-primary-content">
-                <i class="material-icons  mdl-list__item-avatar">person</i>
-                <span>Awesome work, they can do almost anything..</span>
-                <span class="mdl-list__item-text-body">
-                Aaron Paul, Marketing Lead, Awesome.com
-                </span>
-              </span>
-            </li>
-        </ul>
-      </div>
-      <div class="demo-card-event mdl-cell mdl-card mdl-shadow--4dp event-card portfolio-card">
-        <div class="mdl-card__title mdl-card--expand">
-          <h4>
-            Featured event:<br>
-            Community Meetup
-            May 24, 2018<br>
-            7-11pm
-          </h4>
-        </div>
-        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">
-            Add to Calendar
-          </a>
-          <div class="mdl-layout-spacer"></div>
-          <i class="material-icons">event</i>
-        </div>
-      </div>
-  </section>
+
 </div></div>
         </div>
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+            <div class="mdl-logo">&copy; Yuri's Homepage</div>
             <ul class="mdl-mini-footer__link-list">
               <li><a href="#">Privacy & Terms</a></li>
             </ul>
