--- a/Final-project-with-cheats/pages/about.html
+++ b/Final-project-with-cheats/pages/about.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
-    <meta name="description" content="Your about page description"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../styles/material.css" rel="stylesheet">
@@ -15,14 +14,14 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
       <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
         <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div><span class="site-description">Material Design Portfolio</span></span></div>
+            <div class="site-logo"></div><span class="site-description">Home page for Zhongli Liang (Yuri)</span></span></div>
         <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">Portfolio</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
+          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="articles.html">Articles</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">Portfolio</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="articles.html">Articles</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
@@ -32,13 +31,17 @@
               <div class="mdl-card__title">
                 <h1 class="mdl-card__title-text">About</h1>
               </div>
-              <div class="mdl-card__media"><img class="article-image" src="../img/about.jpg" border="0" alt="About">
+              <div class="mdl-card__media"><img class="article-image" src="../img/08.jpg" border="0" alt="About">
               </div>
               <div class="mdl-grid site-copy">
                 <div class="mdl-cell mdl-cell--12-col"><h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
 <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-    <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+<p>   I'm a international student from China, I was born in the early 2000s, So I guess I can't drink beer in the US just yet(Laugh). But joking aside, Let's talk a little about me</p>
+<p>   I'm a CSD student, I'm a home cook, I'm a cell phone photographer, I'm a amateur locksmith, and the list goes on and on..... </p>
+<p>   I have a lot of hobbies, although I'm not very good at ... Lets say most of the things. But I like to give it a try anyway. Because I think that's how life should be, to explore and expand the knowledges until you can't go forward anymore</p>
+<p>   It might come as a surprise to you.. but me, as a CSD student, have not learned anything about programming before the last quarter of school. I started as a amateur PC builder during my middle school time when I was not studying AT ALL in class. </p>
+<p>   But by doing so it leads me to a number of years wasting time and energy looping around schools whose resources and proples are.. well.. let's say it wasn't pleasant.. </p>
+<p>   I feels lucky when I heard that I can skip highschool and go directly to college, that's what ultimately brings me here. </p>
 </div>
 
 
