--- a/Final-project-with-cheats/pages/articles.html
+++ b/Final-project-with-cheats/pages/articles.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
-    <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com."/>
+    <title>Articles</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../styles/material.css" rel="stylesheet">
@@ -15,14 +14,14 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
       <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
         <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div><span class="site-description">Material Design Portfolio</span></span></div>
+            <div class="site-logo"></div><span class="site-description">Home page for Zhongli Liang (Yuri)</span></span></div>
         <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">Portfolio</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
+          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="articles.html">Articles</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="portfolio.html">Portfolio</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="../index.html">Home</a><a class="mdl-navigation__link" href="articles.html">Articles</a><a class="mdl-navigation__link" href="about.html">About</a><a class="mdl-navigation__link" href="contact.html">Contact</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
@@ -30,7 +29,7 @@
           <div class="container"><div class="mdl-grid site-max-width">
     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio1.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-1.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Rocky Peak</h2>
@@ -45,7 +44,7 @@
     </div>
     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio2.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-2.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Night Shadow</h2>
@@ -60,7 +59,7 @@
     </div>
     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio3.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-3.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Sky Reach</h2>
@@ -74,7 +73,7 @@
         </div>
     </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio4.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-4.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Pencil Tip</h2>
@@ -88,7 +87,7 @@
         </div>
     </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio5.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-5.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Magic Leaves</h2>
@@ -102,7 +101,7 @@
         </div>
     </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio6.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-6.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Water Flow</h2>
@@ -116,7 +115,7 @@
         </div>
     </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio7.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-7.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Lonely Bridge</h2>
@@ -130,7 +129,7 @@
         </div>
     </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio8.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-8.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">Busy Street</h2>
@@ -144,7 +143,7 @@
         </div>
     </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
         <div class="mdl-card__media">
-            <img class="article-image" src="img/portfolio9.jpg" border="0" alt="">
+            <img class="article-image" src="../img/material-9.png" border="0" alt="">
         </div>
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">City Scape</h2>
